依存関係を修正

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "aws-amplify": "^6.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,6 +44,6 @@
     "constructs": "^10.4.2",
     "esbuild": "^0.24.0",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "typescript": "^4.9.5"
   }
 }
